# E0-256_SecurityProject-PerProcess-Sanboxing

./: README.md
.github/workflows/: build-ci-container.yml  docs.yml  issue-release-workflow.yml  issue-subscriber.yml  libclang-abi-tests.yml  libcxx-build-and-test.yaml  llvm-project-tests.yml  llvm-tests.yml  new-prs.yml  pr-code-format.yml  pr-request-release-note.yml  pr-subscriber.yml  release-binaries.yml  release-doxygen.yml  release-lit.yml  release-tasks.yml  scorecard.yml  version-check.yml
busybox/: init.ref
clang-tools-extra/: CMakeLists.txt
clang-tools-extra/libc-callsite-mod/: CMakeLists.txt  README.md  libc_callsite_mod.cpp
clang-tools-extra/libc-callsite-mod/Utils/: CMakeLists.txt  library_func_dump.cpp
llvm/docs/: requirements-hashed.txt  requirements.txt
llvm/examples/: CMakeLists.txt
